force-app/force-app/main/default/objects/Form_Element__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Form related to this Form Element.</description>
    <inlineHelpText>The Form related to this Form Element.</inlineHelpText>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Form Elements</relationshipLabel>
    <relationshipName>Form_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>