force-app/force-app/main/default/objects/Form_Element__c/fields/Hint__c.field-meta.xml
<CustomField>
    <fullName>Hint__c</fullName>
    <description>A hint for this question (Form Element).</description>
    <inlineHelpText>A hint for this question (Form Element).</inlineHelpText>
    <label>Hint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>