force-app/force-app/main/default/objects/Form_Element__c/fields/Last_Publish_To_Platform_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Publish_To_Platform_Completed_At__c</fullName>
    <description>The date/time the changes to this record were made visible.</description>
    <inlineHelpText>The date/time the changes to this record were made visible.</inlineHelpText>
    <label>Last Publish To Platform Completed At</label>
    <type>DateTime</type>
</CustomField>