force-app/force-app/main/default/objects/Form_Element__c/fields/Maps_To_Object__c.field-meta.xml
<CustomField>
    <fullName>Maps_To_Object__c</fullName>
    <description>This Form Element&apos;s answer should map to this object.</description>
    <inlineHelpText>This Form Element&apos;s answer should map to this object.</inlineHelpText>
    <label>Maps To (Object)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>