force-app/force-app/main/default/objects/Form_Element__c/fields/Question_RT__c.field-meta.xml
<CustomField>
    <fullName>Question_RT__c</fullName>
    <description>Supplemental question information can be used to show terms and conditions or other rich text for a question.</description>
    <inlineHelpText>Supplemental question information can be used to show terms and conditions or other rich text for a question.</inlineHelpText>
    <label>Supplemental Question Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>